# rihcharts

./: Makefile  README.md  pyproject.toml
rih/: rendersite.py  util.py
rih/charts/: shapplot.py
templates/: impact.html.j2
