[tool.poetry]
name = "rihcharts"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
impactchart = "^0.1.0"
PyYAML = "^6.0"
censusdis = "^0.16.0"
bayesian-optimization = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
