[tool.poetry]
name = "rihcharts"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
impactchart = "^0.1.4"
PyYAML = "^6.0"
censusdis = "^0.16.0"
bayesian-optimization = "^1.4.2"
Jinja2 = "^3.1.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^23.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
